# ait-research-study

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  DisplayImage.cpp  README  cmake_install.cmake  generate_database.sh  install.sh  trainandval.sh
Proposal/: README.md  frontstuff.aux  frontstuff.tex  intro.aux  intro.tex  literature.aux  literature.tex  methodology.aux  methodology.tex  references.bib  thesis.aux  thesis.lof  thesis.tex  thesis.toc
src/: FaceDetector.cpp
src/face_id/face_verification_experiment-master/code/: evaluation.m  mbk_pairs.mat
src/python/: create_siamese_db.py  fulldbfile.py  fulldbfile.py~  labelisation.py  nano.save  permute_traintest.py  trainandval.py  trainandvalidate.py
src/siamese/: analyse.py  siamese_mbk.prototxt  siamese_mbk_solver.prototxt  siamese_mbk_train_test.prototxt  test_siamese.py  train_siamese_mbk.sh
src/software/: script.py
src/software/video/: video2.asf
src/src/face_id/: test.py~
src/src/siamese/: test.py
